--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "SHABAN-MD",
-  "description": "Javascript WhatsApp bot made by 𝐌𝐑 𝐒𝐇𝐀𝐁𝐀𝐍",
-  "logo": "https://ik.imagekit.io/mrshaban/Picsart_25-02-01_22-47-44-239.jpg",
-  "keywords": ["SHABAN-MD"],
+  "name": "SALEEM-MD",
+  "description": "Javascript WhatsApp bot made by SALEEM PATHAN",
+  "logo": "https://i.ibb.co/N2LWTWSP/shaban-md.jpg",
+  "keywords": ["SALEEM-MD"],
   "success_url": "/",
 
     "stack": "container",
@@ -16,13 +16,13 @@
     "STICKER_NAME": {
       "description": "type your sticker pack name.",
       "required": false,
-      "value": "SHABAN-MD︎"
+      "value": "SALEEM-MD︎"
     },
     
     "MENU_IMAGE_URL": {
       "description": "add url for mention reply and menu if want.",
       "required": true,
-      "value": "https://ik.imagekit.io/mrshaban/Picsart_25-02-01_22-47-44-239.jpg"
+      "value": "https://i.ibb.co/N2LWTWSP/shaban-md.jpg"
     }, 
       
     "PREFIX": {
@@ -91,7 +91,7 @@
     "BOT_NAME": {
       "description": "Type here the bot name.",
       "required": false,
-      "value": "SHABAN-MD V5"
+      "value": "SALEEM-MD V5"
 
      },
      
@@ -190,4 +190,5 @@
      ],
   "stack": "heroku-24"
 }
-  
+
+    
